--- a/fair-vote/frontend/test/testbyhtml/test.html
+++ b/fair-vote/frontend/test/testbyhtml/test.html
@@ -4,6 +4,7 @@
 	<title>测试使用web3.js连接合约</title>
 	<script src="https://cdn.bootcdn.net/ajax/libs/jquery/3.5.1/jquery.js"></script>
 	<script src="https://cdn.jsdelivr.net/npm/web3@latest/dist/web3.min.js"></script>
+	<script src="https://cdn.ethers.io/lib/ethers-5.0.umd.min.js" type="text/javascript"></script>
 	<script type="text/javascript" src="./testContractCon.js"></script>
 </head>
 <body>
