--- a/fair-vote/frontend/test/testbyhtml/test.html
+++ b/fair-vote/frontend/test/testbyhtml/test.html
@@ -6,6 +6,7 @@
 	<script src="https://cdn.jsdelivr.net/npm/web3@latest/dist/web3.min.js"></script>
 	<!-- web3.js完全替代了 <script src="https://cdn.ethers.io/lib/ethers-5.0.umd.min.js" type="text/javascript"></script> -->
 	<script type="text/javascript" src="./VoteFactoryRepository.js"></script>
+	<script type="text/javascript" src="./VoteRepository.js"></script>
 	<script type="text/javascript" src="./testContractCon.js"></script>	
 </head>
 <body>
