feat: 🎸 completing phase encrypt in voting

--- a/fair-vote/frontend/test/testbyhtml/test.html
+++ b/fair-vote/frontend/test/testbyhtml/test.html
@@ -23,8 +23,8 @@
 	<div  align="center" >
 		<button onclick="createVote()" >创建新投票</button>
 		<button onclick="showVote()" >查看所有投票</button>
-		<button onclick="registerToVote('0x2aB37d188D13b493AAC6a645d16594db2b708B8f',
-		 Math.floor(Math.random()*(150056-89865+1)+89865))" >注册投票</button>
+		<button onclick="registerToVote()" >注册投票</button>
+		<button onclick="encryptToVote()" >加密投票</button>
 	</div>
 	
 
