fix: 🐛 ajlist's length always is 1 when constructing zk
Because the o which getted by the VoteInfo in contract is string, so new
Array(o)'s length is always 1

--- a/fair-vote/frontend/test/testbyhtml/test.html
+++ b/fair-vote/frontend/test/testbyhtml/test.html
@@ -21,10 +21,10 @@
 
 	</div>
 	<div  align="center" >
-		<button onclick="createVote()" >创建新投票</button>
-		<button onclick="showVote()" >查看所有投票</button>
-		<button onclick="registerToVote()" >注册投票</button>
-		<button onclick="encryptToVote()" >加密投票</button>
+		<button onclick="handleCreateVote()" >创建新投票</button>
+		<button onclick="handleShowVote()" >查看所有投票</button>
+		<button onclick="handleRegisterVote()" >注册投票</button>
+		<button onclick="handleEncryptVote()" >加密投票</button>
 	</div>
 	
 
