feat: 🎸 complet the phrase Decrypt

--- a/fair-vote/frontend/test/testbyhtml/test.html
+++ b/fair-vote/frontend/test/testbyhtml/test.html
@@ -25,6 +25,7 @@
 		<button onclick="handleShowVote()" >查看所有投票</button>
 		<button onclick="handleRegisterVote()" >注册投票</button>
 		<button onclick="handleEncryptVote()" >加密投票</button>
+		<button onclick="handleDecryptVote()" >解密投票</button>
 	</div>
 	
 
