feat: 🎸 completing the phrase Constructing vote

--- a/fair-vote/frontend/test/testbyhtml/test.html
+++ b/fair-vote/frontend/test/testbyhtml/test.html
@@ -26,6 +26,9 @@
 		<button onclick="handleRegisterVote()" >注册投票</button>
 		<button onclick="handleEncryptVote()" >加密投票</button>
 		<button onclick="handleDecryptVote()" >解密投票</button>
+		<button onclick="handleConstructVote()" >构造投票</button>
+		
+		
 	</div>
 	
 
