feat: 🎸 complete the phrase recover

--- a/fair-vote/frontend/test/testbyhtml/test.html
+++ b/fair-vote/frontend/test/testbyhtml/test.html
@@ -27,7 +27,7 @@
 		<button onclick="handleEncryptVote()" >加密投票</button>
 		<button onclick="handleDecryptVote()" >解密投票</button>
 		<button onclick="handleConstructVote()" >构造投票</button>
-		
+		<button onclick="handleRecoverVote()" >恢复投票</button>
 		
 	</div>
 	
