feat: 🎸 add tally vote to get the result

--- a/fair-vote/frontend/test/testbyhtml/test.html
+++ b/fair-vote/frontend/test/testbyhtml/test.html
@@ -28,6 +28,7 @@
 		<button onclick="handleDecryptVote()" >解密投票</button>
 		<button onclick="handleConstructVote()" >构造投票</button>
 		<button onclick="handleRecoverVote()" >恢复投票</button>
+		<button onclick="handleTallyVote()" >投票计数</button>
 		
 	</div>
 	
