--- a/fair-vote/frontend/purehtml/html/AttendVote.html
+++ b/fair-vote/frontend/purehtml/html/AttendVote.html
@@ -7,8 +7,10 @@
 
     <link rel="stylesheet" href="../CSS/attendVote.css" type="text/css">
     <link rel="stylesheet" href="../CSS/popUps.css" type="text/css">
-    <script src="../JS/Utils.js"></script>
-    <script src="../JS/AttendVote.js" charset="utf-8"></script>
+
+
+    <script src="../js/utils.js"></script>
+    <script src="../js/voteEventHandle.js"></script>
 
 </head>
 <body>
@@ -130,6 +132,8 @@
 
 </body>
 <script>
+    handleShowVote();
+    
     LeftOption(0);
 </script>
 </html>
