--- a/fair-vote/frontend/purehtml/index.html
+++ b/fair-vote/frontend/purehtml/index.html
@@ -39,7 +39,7 @@
                 <label class="setup-label" >站点：</label>
                 <textarea class="port-textarea" id="address" placeholder="ws://47.107.128.150:8546"></textarea>
                 <img src="./images/loading.png" class="status-img" id="status">
-                <button class="btnPort" id="btnConnect" style="margin-top:10px;" onclick="handleConnect()">创建</button>
+                <button class="btnPort" id="btnConnect" style="margin-top:10px;" >创建</button>
             </div>
             <div class="setup-list">
                 <label class="setup-label">账号：</label>
