feat: 🎸 completing registering the vote
completing the step1-register to vote in the phrase voting

--- a/fair-vote/frontend/purehtml/index.html
+++ b/fair-vote/frontend/purehtml/index.html
@@ -54,24 +54,24 @@
                 </div>
                 <button class="btnPort" id="btnUnlock">解锁</button>
             </div>
-            
+
             <div class="setup-list">
                 <p class="info-title">投票名称：</p>
                 <p class="info-content" id="voteName"></p>
                 <p class="info-title">候选人个数：</p>
-                <p class="info-content" id="candidatesNum"></p>
+                <p class="info-content" id="candNum"></p>
                 <p class="info-title">最大参与人数：</p>
                 <p class="info-content" id="maxVoterNum"></p>
                 <p class="info-title">注册截止时间：</p>
-                <p class="info-content" id="initEndTime"></p>
+                <p class="info-content" id="regTime"></p>
                 <p class="info-title">加密截止时间：</p>
-                <p class="info-content" id="encEndTime"></p>
+                <p class="info-content" id="encTime"></p>
                 <p class="info-title">构造截止时间：</p>
-                <p class="info-content" id="assEndTime"></p>
+                <p class="info-content" id="assTime"></p>
                 <p class="info-title">解密截止时间：</p>
-                <p class="info-content" id="decEndTime"></p>
+                <p class="info-content" id="decTime"></p>
                 <p class="info-title">恢复截止时间：</p>
-                <p class="info-content" id="recEndTime"></p>
+                <p class="info-content" id="recTime"></p>
             </div>
         </div>
     </div>
