--- a/fair-vote/frontend/purehtml/html/AttendVote.html
+++ b/fair-vote/frontend/purehtml/html/AttendVote.html
@@ -8,11 +8,11 @@
     <link rel="stylesheet" href="../CSS/attendVote.css" type="text/css">
     <link rel="stylesheet" href="../CSS/popUps.css" type="text/css">
 
-
     <script src="../js/voteRepository.js"></script>
     <script src="../js/voteFactoryRepository.js"></script>
     <script src="../js/config.js"></script>
     <script src="../js/utils.js"></script>
+    <script src="../js/vote.js"></script>
     <script src="../js/voteFactory.js"></script>
     
     <script src="../js/voteAttendEventHandler.js"></script>
@@ -51,7 +51,7 @@
             </div>
         </div>
         <div class="btnRegister-div">
-            <button class="button-register" onclick="popBox()">自动生成</button>
+            <button class="button-register" onclick="handleGeneProof()">自动生成</button>
             <button class="button-register" onclick="handleRegisterVote()">注册投票</button>
         </div>
     </div>
@@ -127,7 +127,7 @@
     </div>
     <div class="center">
         <p class="label1">私钥：</p>
-        <input class="input-textarea1" id="voterID"></input>
+        <input class="input-textarea1" id="voteXi"></input>
     </div>
 
     <div class="down">
