feat: 🎸 complete the step2 encrypting vote in Voting phrase

--- a/fair-vote/frontend/purehtml/html/AttendVote.html
+++ b/fair-vote/frontend/purehtml/html/AttendVote.html
@@ -51,7 +51,7 @@
             </div>
         </div>
         <div class="btnRegister-div">
-            <button class="button-register" onclick="handleGeneProof()">自动生成</button>
+            <button class="button-register" onclick="handleGeneRegisterProof()">自动生成</button>
             <button class="button-register" onclick="handleRegisterVote()">注册投票</button>
         </div>
     </div>
@@ -67,8 +67,8 @@
             </div>
         </div>
         <div class="btnRegister-div">
-            <button class="button-register" onclick="popBox()">自动生成</button>
-            <button class="button-register" onclick="Send()">上链</button>
+            <button class="button-register" onclick="handleGeneEncryptProof()">自动生成</button>
+            <button class="button-register" onclick="handleEncryptVote()">上链</button>
         </div>
     </div>
     <div class="page" id="DecryptPage" style="display: none;">
