feat: 🎸 complete the step3 decrypting vote in Voting phrase
complete decrypting the vote and modify zeroproof css

--- a/fair-vote/frontend/purehtml/index.html
+++ b/fair-vote/frontend/purehtml/index.html
@@ -44,7 +44,7 @@
             <div class="setup-list">
                 <label class="setup-label">账号：</label>
                 <div style="width: 100%;height:20px;margin-bottom: 15px;">
-                    <input type="text" class="input-pwd" id="account" placeholder="0xa22BcD941c53791Cc4C6eCD84cd149Bc4556896f" />
+                    <input type="text" class="input-pwd" id="account" placeholder="0xa22BcD941c53791Cc4C6eCD84cd149Bc4556896f" value="0xa22BcD941c53791Cc4C6eCD84cd149Bc4556896f" />
                     <img class="status-img" id="account-status" style="float: left;margin-left: 6px;" />
                 </div>
                 <label class="setup-label">密码：</label>
