--- a/fair-vote/frontend/purehtml/html/AttendVote.html
+++ b/fair-vote/frontend/purehtml/html/AttendVote.html
@@ -45,14 +45,14 @@
                 <p class="label" >公钥：</p>
                 <input class="input-textarea" id="PublicKey"></input>
             </div>
-            <div class="list-div">
+            <div class="list-div" style="height: 120px;">
                 <p class="label">证明：</p>
-                <input class="input-textarea" id="RegisterProof"></input>
+                <textarea class="input-textarea" style="height: 75%;" id="RegisterProof"></textarea>
             </div>
         </div>
         <div class="btnRegister-div">
-            <button class="button-register" onclick="handleGeneRegisterProof()">自动生成</button>
-            <button class="button-register" onclick="handleRegisterVote()">注册投票</button>
+            <button class="button-register" onclick="handleGeneRegProof()">自动生成</button>
+            <button class="button-register" onclick="handleRegVote()">注册投票</button>
         </div>
     </div>
     <div class="page" id="EncryptPage" style="display: none;">
@@ -61,14 +61,14 @@
                 <p class="label">加密投票：</p>
                 <input class="input-textarea" id="EncryptVote"></input>
             </div>
-            <div class="list-div">
+            <div class="list-div" style="height: 120px;">
                 <p class="label">证明：</p>
-                <input class="input-textarea" id="EncryptProof"></input>
+                <textarea class="input-textarea" style="overflow:scroll; overflow-x:hidden;height: 75%;" id="EncryptProof"></textarea>
             </div>
         </div>
         <div class="btnRegister-div">
-            <button class="button-register" onclick="handleGeneEncryptProof()">自动生成</button>
-            <button class="button-register" onclick="handleEncryptVote()">上链</button>
+            <button class="button-register" onclick="handleGeneEncProof()">自动生成</button>
+            <button class="button-register" onclick="handleEncVote()">上链</button>
         </div>
     </div>
     <div class="page" id="DecryptPage" style="display: none;">
@@ -77,14 +77,15 @@
                 <p class="label">解密投票：</p>
                 <input class="input-textarea" id="DecryptVote"></input>
             </div>
-            <div class="list-div">
+            <div class="list-div" style="height: 120px;">
                 <p class="label">证明：</p>
-                <input class="input-textarea" id="DecryptProof"></input>
+                <textarea class="input-textarea" style="height: 75%;" id="DecryptProof"></textarea>
+                <!-- <input class="input-textarea" id="DecryptProof"></input> -->
             </div>
         </div>
         <div class="btnRegister-div">
-            <button class="button-register" onclick="popBox()">自动生成</button>
-            <button class="button-register" onclick="Send()">上链</button>
+            <button class="button-register" onclick="handleGeneDecProof()">自动生成</button>
+            <button class="button-register" onclick="handleDecVote()">上链</button>
         </div>
     </div>
     <div class="page" id="AssistPage" style="display: none;">
@@ -93,9 +94,9 @@
                 <p class="label">构造投票：</p>
                 <input class="input-textarea" id="AssistVote"></input>
             </div>
-            <div class="list-div">
+            <div class="list-div" style="height: 120px;">
                 <p class="label">证明：</p>
-                <input class="input-textarea" id="AssistProof"></input>
+                <textarea class="input-textarea" style="height: 75%;" id="AssistProof"></textarea>
             </div>
         </div>
         <div class="btnRegister-div">
@@ -109,9 +110,9 @@
                 <p class="label">恢复投票：</p>
                 <input class="input-textarea" id="RecoverVote"></input>
             </div>
-            <div class="list-div">
+            <div class="list-div" style="height: 120px;">
                 <p class="label">证明：</p>
-                <input class="input-textarea" id="RecoverProof"></input>
+                <textarea class="input-textarea" style="height: 75%;" id="RecoverProof"></textarea>
             </div>
         </div>
         <div class="btnRegister-div">
